@@ -15,10 +15,11 @@ Verilator 5.021 devel
 
 * Add predicted stack overflow warning (#4799).
 * Add +verilator+coverage+file runtime option.
-* Add --main support for dumping coverage.
+* Add --runtime-debug for Verilated executable runtime debugging.
 * Add '--decorations node' for inserting debug comments into emitted code.
 * Remove deprecated 32-bit pointer mode (`gcc -m32`).
 * Change zero replication width error to ZEROREPL warning (#4753) (#4762). [Pengcheng Xu]
+* Support dumping coverage with --main.
 * Support `vpiConstType` in `vpi_get_str()` (#4797). [Marlon James]
 * Support SystemC 3.0.0 public review version (#4805) (#4807). [Anthony Donlon]
 * Support parsing anonymous primitive instantiations (#4809). [Anthony Donlon]
